style(language level): Remove guava